--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,35 @@
             </div>
         </div>
         {% endfor %}
+
+        <div class="row">
+            <div class="col-lg-12">
+                <h3>Processed issues</h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">Title</th>
+                            <th scope="col">Action</th>
+                            <th scope="col">Url</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for issue in issues %}
+                        <tr>
+                            <th scope="row">{{issue[0].title}}</th>
+                            <td>{{issue[1]}}</td>
+                            <td><a href="{{issue[0].url}}">{{issue[0].url}}</a></td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
 
