--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,11 @@
                 <div class="alert alert-primary">
                     <p>Current user: {{user}}</p>
                 </div>
+                {% if fallback %}
+                <div class="alert alert-warning">
+                    <p>Fallback label is: <strong>{{fallback}}</strong></p>
+                </div>
+                {% endif %}
             </div>
         </div>
         <div class="row">
